K1J-405: Started spring security update, fixed all tests, fixed dss package with current opensam version. App builds with tests and starts. WIP